fixed z-index issues with collections and copy json copying formatted content + added functionality to expand facet holder is user selects view more

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -517,6 +517,7 @@ input.search-bar__input:focus {
   display: inline-block;
   font-size: 14px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+  z-index: 3;
 }
 
 .ui-menu-item a {
@@ -1087,4 +1088,10 @@ input.search-bar__input:focus {
   .state {
     flex: 2 0 100%;
   }
+}
+
+.hide-me {
+  position: absolute;
+  left: -5000px;
+  width: 200px;
 }
